frontend/scripts/fixtures/localization/invalid/generated-comment.tsx
// @generated
export function GeneratedCommentDoesNotBypassScanning() {
  return <div>Generated comments cannot suppress this finding</div>;
}
